# pwnr

./: Cargo.toml  README.md  pwn1
src/: binary.rs  comms.rs  ergonomics.rs  error.rs  lib.rs  prelude.rs  process.rs  util.rs
src/comms/: process.rs
src/util/: cyclic.rs  debruijn.rs  memory_base.rs
