[package]
name = "ctftools"
version = "0.1.0"
authors = ["Ben Lichtman"]
edition = "2018"
description = "TLS intercepting web proxy inspired by Burp Suite and Mitmproxy"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.28"
goblin = "0.2.1"
checksec = "0.0.4"
sysexit = "0.2.0"
memmap = "0.7.0"
