[package]
name = "ctftools"
version = "0.1.3"
authors = ["Ben Lichtman"]
edition = "2018"
description = "Helper library for CTFs - based off pwntools for python3"
repository = "https://github.com/Ben-Lichtman/ctftools"
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0.24"
goblin = "0.3.4"
ropr = "0.2.1"
checksec = "0.0.8"

